fix(auth,frontend,cors): seed pre-login tenant + relax CORS request headers
Two related client-integration fixes.

1. Pre-login user list on a fresh device
   GET /api/v1/auth/users/list fails closed with 400 TENANT_REQUIRED when no
   tenant is known (it lists staff by tenant and must never leak across
   tenants). The frontend only sent X-Tenant-ID from the tenant remembered at
   the last login, so the very first login on a fresh device had none and the
   user/PIN screen 400'd.

   Add a deployment-level default tenant, injected at container start into
   window.__APP_CONFIG__ (public/config.js + docker-entrypoint.sh, DEFAULT_TENANT_ID),
   served no-store so redeploys aren't masked by cache. resolvePreAuthTenantId()
   uses the remembered tenant, falling back to the configured one; unset leaves
   the existing password-login fallback for multi-tenant setups.

   Audited the other pre-login endpoints (login, pin-login, refresh,
   forgot-password, reset-password): they resolve the tenant from the username/
   token, so users/list is the only staff endpoint needing the header.

2. CORS request headers
   The allowed-headers list was fixed (Authorization, Content-Type,
   X-Requested-With, Accept, X-Tenant-ID), so a client sending any other header
   (Cache-Control, a custom X-*) failed preflight. Credentials are disabled, so
   there is no cookie/session to protect: accept any request header. Origins
   stay restricted. Added a preflight test covering an arbitrary header.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TAVk1bqCiTXtYSkx1ENZiF